--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
       "description": "This classic banana bread recipe comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.",
       "cookingMethod": "Bake",
       "recipeIngredient": [
-        "1 egg"
+        "1 egg",
+        "1/2 cup sugar",
+        "2 ripe bananas, smashed",
+        "1 1/2 cups all-purpose flour",
+        "1 teaspoon baking soda",
+        "1/2 teaspoon salt",
+        "1/2 cup walnuts, chopped"
       ],
       "recipeInstructions": "Preheat the oven to 350°F (175°C). In a bowl, mix the smashed bananas and sugar. Add the egg and mix well. Sift the flour, baking soda, and salt together. Slowly fold into the banana mixture. Add walnuts and pour the batter into a greased loaf pan. Bake for 60 minutes or until a toothpick inserted into the center comes out clean.",
       "nutrition": {
