--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   <!-- Recipe Content -->
   <h1>Mom's World Famous Banana Bread</h1>
-  <p>This classic banana bread recipe comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.</p>
+  <p>This classic banana bread recie comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.</p>
   <img src="https://example.com/bananabread.jpg" alt="Mom's World Famous Banana Bread">
 
   <div class="grid">
