--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       "description": "This classic banana bread recipe comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.",
       "cookingMethod": "Bake",
       "recipeIngredient": [
-        "1 egg",
+        "1 egg e",
         "1/2 cup sugar",
         "2 ripe bananas, smashed",
         "1 1/2 cups all-purpose flour",
