--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       "description": "This classic banana bread recipe comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.",
       "cookingMethod": "Bake",
       "recipeIngredient": [
-        "1 egg e",
+        "1 egg",
         "1/2 cup sugar",
         "2 ripe bananas, smashed",
         "1 1/2 cups all-purpose flour",
@@ -96,6 +96,13 @@
   <h2>Ingredients</h2>
   <ol>
     <li>1 egg</li>
+    <li>1/2 cup sugar</li>
+    <li>2 ripe bananas, smashed</li>
+    <li>1 1/2 cups all-purpose flour</li>
+    <li>1 teaspoon baking soda</li>
+    <li>1/2 teaspoon salt</li>
+    <li>1/2 cup walnuts, chopped</li>
+    
     
   </ol>
 
