--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       "description": "This classic banana bread recipe comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.",
       "cookingMethod": "Bake",
       "recipeIngredient": [
-        "1 egg",
-        "1/2 cup sugar",
+        "1 egg, 1/2 cup sugar",
         "2 ripe bananas, smashed",
         "1 1/2 cups all-purpose flour",
         "1 teaspoon baking soda",
@@ -102,7 +101,7 @@
     <li>1 teaspoon baking soda</li>
     <li>1/2 teaspoon salt</li>
     <li>1/2 cup walnuts, chopped</li>
-    
+
     
   </ol>
 
