--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       "description": "This classic banana bread recipe comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.",
       "cookingMethod": "Bake",
       "recipeIngredient": [
-        "2 ripe bananas, smashed",
+        "2 bananas",
         "1 1/2 cups all-purpose flour",
         "1 teaspoon baking soda",
         "1/2 teaspoon salt",
@@ -93,8 +93,7 @@
 
   <h2>Ingredients</h2>
   <ol>
-    <li>1/2 cup sugar</li>
-    <li>2 ripe bananas, smashed</li>
+    <li>2 bananas</li>
     <li>1 1/2 cups all-purpose flour</li>
     <li>1 teaspoon baking soda</li>
     <li>1/2 teaspoon salt</li>
