--- a/index.html
+++ b/index.html
@@ -3,34 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mom's World Famous Banana Bread</title>
+  <title>Classic Chocolate Chip Cookies</title>
   
   <!-- Add the schema.org structured data for the recipe -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Recipe",
-      "name": "Mom's World Famous Banana Bread",
-      "image": "https://example.com/bananabread.jpg",
-      "description": "This classic banana bread recipe comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.",
+      "name": "Classic Chocolate Chip Cookies",
+      "image": "https://example.com/chocolatechipcookies.jpg",
+      "description": "These classic chocolate chip cookies are crispy on the outside and chewy on the inside.",
       "cookingMethod": "Bake",
       "recipeIngredient": [
-        "2 bananas",
-        "1 1/2 cups all-purpose flour",
-        "1 teaspoon baking soda",
-        "1/2 teaspoon salt",
-        "1/2 cup walnuts, chopped"
+        "1 cup butter, softened",
+        "1 cup white sugar",
+        "1 cup packed brown sugar",
+        "2 eggs",
+        "1 tsp vanilla extract",
+        "2 cups all-purpose flour",
+        "1 tsp baking soda",
+        "1/2 tsp salt",
+        "2 cups semisweet chocolate chips"
       ],
-      "recipeInstructions": "Preheat the oven to 350°F (175°C). In a bowl, mix the smashed bananas and sugar. Add the egg and mix well. Sift the flour, baking soda, and salt together. Slowly fold into the banana mixture. Add walnuts and pour the batter into a greased loaf pan. Bake for 60 minutes or until a toothpick inserted into the center comes out clean.",
+      "recipeInstructions": "Preheat the oven to 350°F (175°C). In a large bowl, cream together the butter, white sugar, and brown sugar until smooth. Beat in the eggs one at a time, then stir in the vanilla. Dissolve the baking soda in hot water, and add to the batter along with salt. Stir in flour and chocolate chips. Drop by large spoonfuls onto ungreased baking sheets. Bake for about 10 minutes, or until edges are nicely browned.",
       "nutrition": {
         "@type": "NutritionInformation",
-        "calories": "240 calories",
-        "fatContent": "9 grams fat"
+        "calories": "300 calories",
+        "fatContent": "15 grams fat"
       },
-      "prepTime": "PT15M",
-      "cookTime": "PT1H",
-      "recipeYield": "1 loaf",
-      "suitableForDiet": "https://schema.org/LowFatDiet"
+      "prepTime": "PT20M",
+      "cookTime": "PT10M",
+      "recipeYield": "24 cookies",
+      "suitableForDiet": "https://schema.org/LowSugarDiet"
     }
   </script>
   
@@ -78,41 +82,43 @@
 <body>
 
   <!-- Recipe Content -->
-  <h1>Mom's World Famous Banana Bread</h1>
-  <p>This classic banana bread recie comes from my mom -- the walnuts add a nice texture and flavor to the banana bread.</p>
-  <img src="https://example.com/bananabread.jpg" alt="Mom's World Famous Banana Bread">
+  <h1>Classic Chocolate Chip Cookies</h1>
+  <p>These classic chocolate chip cookies are crispy on the outside and chewy on the inside.</p>
+  <img src="https://example.com/chocolatechipcookies.jpg" alt="Classic Chocolate Chip Cookies">
 
   <div class="grid">
-    <div><strong>Prep Time:</strong> PT15M</div>
-    <div><strong>Cook Time:</strong> PT1H</div>
-    <div><strong>Total Time:</strong> PT1H</div>
-    <div><strong>Yield:</strong> 1 loaf</div>
+    <div><strong>Prep Time:</strong> PT20M</div>
+    <div><strong>Cook Time:</strong> PT10M</div>
+    <div><strong>Total Time:</strong> PT30M</div>
+    <div><strong>Yield:</strong> 24 cookies</div>
   </div>
 
   <div class="divider"></div>
 
   <h2>Ingredients</h2>
   <ol>
-    <li>2 bananas</li>
-    <li>1 1/2 cups all-purpose flour</li>
-    <li>1 teaspoon baking soda</li>
-    <li>1/2 teaspoon salt</li>
-    <li>1/2 cup walnuts, chopped</li>
-
-    
+    <li>1 cup butter, softened</li>
+    <li>1 cup white sugar</li>
+    <li>1 cup packed brown sugar</li>
+    <li>2 eggs</li>
+    <li>1 tsp vanilla extract</li>
+    <li>2 cups all-purpose flour</li>
+    <li>1 tsp baking soda</li>
+    <li>1/2 tsp salt</li>
+    <li>2 cups semisweet chocolate chips</li>
   </ol>
 
   <div class="divider"></div>
 
   <h2>Instructions</h2>
-  <p>Preheat the oven to 350°F (175°C). In a bowl, mix the smashed bananas and sugar. Add the egg and mix well. Sift the flour, baking soda, and salt together. Slowly fold into the banana mixture. Add walnuts and pour the batter into a greased loaf pan. Bake for 60 minutes or until a toothpick inserted into the center comes out clean.</p>
+  <p>Preheat the oven to 350°F (175°C). In a large bowl, cream together the butter, white sugar, and brown sugar until smooth. Beat in the eggs one at a time, then stir in the vanilla. Dissolve the baking soda in hot water, and add to the batter along with salt. Stir in flour and chocolate chips. Drop by large spoonfuls onto ungreased baking sheets. Bake for about 10 minutes, or until edges are nicely browned.</p>
 
   <div class="divider"></div>
 
   <h2>Nutrition Facts</h2>
   <div class="grid">
-    <div>Calories: 240 calories</div>
-    <div>Fat: 9 grams fat</div>
+    <div>Calories: 300 calories</div>
+    <div>Fat: 15 grams fat</div>
   </div>
 
   <div class="divider"></div>
